rebrand: LEVIATHAN VS - The Abyss Awaits - Complete theme overhaul

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "2.0.0",
   "options": {
     "cwd": "${workspaceFolder}",
@@ -19,7 +19,7 @@
       "id": "commitMessage",
       "type": "promptString",
       "description": "Mensagem do commit:",
-      "default": "HOG: secure update"
+      "default": "LEVIATHAN: secure update"
     },
     {
       "id": "targetUrl",
@@ -45,7 +45,7 @@
   ],
   "tasks": [
     {
-      "label": "[HOG] ENCODE - Preparar para IA",
+      "label": "[LEVIATHAN] ENCODE - Preparar para IA",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -68,7 +68,7 @@
       "detail": "Converte termos sensiveis para termos neutros antes de enviar para IA"
     },
     {
-      "label": "[HOG] RESTORE - Restaurar Original",
+      "label": "[LEVIATHAN] RESTORE - Restaurar Original",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -88,7 +88,7 @@
       "detail": "Restaura os termos originais apos receber resposta da IA"
     },
     {
-      "label": "[HOG] SMART RESTORE - Restaurar e Abrir",
+      "label": "[LEVIATHAN] SMART RESTORE - Restaurar e Abrir",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe translator.py restore --file ${input:customFile}; code ${input:customFile}",
       "presentation": {
@@ -100,7 +100,7 @@
       "detail": "Restaura os termos e foca o editor no arquivo"
     },
     {
-      "label": "[HOG] FULL CYCLE - Encode + Copy",
+      "label": "[LEVIATHAN] FULL CYCLE - Encode + Copy",
       "type": "shell",
       "command": "$file = '${input:customFile}'; $result = C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe translator.py encode --file $file 2>&1; Write-Host $result; if ($LASTEXITCODE -eq 0) { $content = Get-Content $file -Raw -ErrorAction SilentlyContinue; if ($content -and $content.Trim()) { Set-Clipboard -Value $content; Write-Host \"`n>>> MEGAZORD: CONTEUDO SANITIZADO E COPIADO PARA CLIPBOARD!\" -ForegroundColor Green } else { Write-Host \"`n>>> ERRO: Arquivo vazio!\" -ForegroundColor Red } } else { Write-Host \"`n>>> ERRO: Falha no encode\" -ForegroundColor Red }",
       "presentation": {
@@ -113,7 +113,7 @@
       "detail": "Sanitiza, valida conteudo e copia para clipboard - pronto para CTRL+V na IA"
     },
     {
-      "label": "[HOG] STATS - Estatisticas",
+      "label": "[LEVIATHAN] STATS - Estatisticas",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -131,7 +131,7 @@
       "detail": "Mostra estatisticas do arquivo work.txt e regras de traducao"
     },
     {
-      "label": "[HOG] PREVIEW - Ver Alteracoes",
+      "label": "[LEVIATHAN] PREVIEW - Ver Alteracoes",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -151,7 +151,7 @@
       "detail": "Pre-visualiza as alteracoes sem modificar o arquivo"
     },
     {
-      "label": "[HOG] CHECK - Verificar Seguranca",
+      "label": "[LEVIATHAN] CHECK - Verificar Seguranca",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -171,7 +171,7 @@
       "detail": "Verifica se o arquivo esta limpo (sem termos sensiveis)"
     },
     {
-      "label": "[HOG] HISTORY - Historico",
+      "label": "[LEVIATHAN] HISTORY - Historico",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -189,7 +189,7 @@
       "detail": "Exibe historico de todas as operacoes realizadas"
     },
     {
-      "label": "[HOG] UNDO - Desfazer Ultima",
+      "label": "[LEVIATHAN] UNDO - Desfazer Ultima",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -207,7 +207,7 @@
       "detail": "Desfaz a ultima operacao de encode ou restore"
     },
     {
-      "label": "[HOG] VALIDATE - Validar Config",
+      "label": "[LEVIATHAN] VALIDATE - Validar Config",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -225,7 +225,7 @@
       "detail": "Valida integridade do config.json e detecta conflitos"
     },
     {
-      "label": "[HOG] INTERACTIVE - Modo Console",
+      "label": "[LEVIATHAN] INTERACTIVE - Modo Console",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -243,7 +243,7 @@
       "detail": "Inicia modo interativo com menu completo"
     },
     {
-      "label": "[HOG] OBFUSCATE - Ofuscar Variaveis",
+      "label": "[LEVIATHAN] OBFUSCATE - Ofuscar Variaveis",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -263,7 +263,7 @@
       "detail": "Renomeia variaveis sensiveis para var_a1, var_b2, etc."
     },
     {
-      "label": "[HOG] DEOBFUSCATE - Restaurar Variaveis",
+      "label": "[LEVIATHAN] DEOBFUSCATE - Restaurar Variaveis",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -283,7 +283,7 @@
       "detail": "Restaura nomes originais das variaveis ofuscadas"
     },
     {
-      "label": "[HOG] FULL TRANSFORM - Encode + Obfuscate",
+      "label": "[LEVIATHAN] FULL TRANSFORM - Encode + Obfuscate",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -303,7 +303,7 @@
       "detail": "Aplica encode semantico + ofuscacao de variaveis em um passo"
     },
     {
-      "label": "[HOG] GIT - SAFE DEPLOY",
+      "label": "[LEVIATHAN] GIT - SAFE DEPLOY",
       "type": "shell",
       "command": "$check = C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe translator.py check 2>&1; if ($LASTEXITCODE -eq 0) { Write-Host '>>> Arquivo limpo - iniciando deploy...' -ForegroundColor Green; git add .; git commit -m '${input:commitMessage}'; git push origin main; Write-Host '>>> DEPLOY CONCLUIDO!' -ForegroundColor Green } else { Write-Host $check; Write-Host '>>> DEPLOY BLOQUEADO: Remova termos sensiveis antes do push!' -ForegroundColor Red }",
       "presentation": {
@@ -316,7 +316,7 @@
       "detail": "Comita e sobe pro Git APENAS se o codigo estiver sanitizado"
     },
     {
-      "label": "[HOG] GIT STATUS",
+      "label": "[LEVIATHAN] GIT STATUS",
       "type": "shell",
       "command": "git",
       "args": [
@@ -332,7 +332,7 @@
       "detail": "Mostra status do repositorio git"
     },
     {
-      "label": "[HOG] GIT PUSH",
+      "label": "[LEVIATHAN] GIT PUSH",
       "type": "shell",
       "command": "git",
       "args": [
@@ -350,7 +350,7 @@
       "detail": "Envia alteracoes para o GitHub"
     },
     {
-      "label": "[HOG] GIT COMMIT ALL",
+      "label": "[LEVIATHAN] GIT COMMIT ALL",
       "type": "shell",
       "command": "git add .; git commit -m '${input:commitMessage}'",
       "presentation": {
@@ -362,7 +362,7 @@
       "detail": "Adiciona e comita todas as alteracoes"
     },
     {
-      "label": "[HOG] CLEAN - Limpar Backups",
+      "label": "[LEVIATHAN] CLEAN - Limpar Backups",
       "type": "shell",
       "command": "Remove-Item -Path backups -Recurse -Force -ErrorAction SilentlyContinue; Remove-Item -Path .history.json -Force -ErrorAction SilentlyContinue; Remove-Item -Path .var_map.json -Force -ErrorAction SilentlyContinue; Write-Host 'Backups e historico limpos!' -ForegroundColor Green",
       "presentation": {
@@ -374,7 +374,7 @@
       "detail": "Remove todos os backups e arquivos temporarios"
     },
     {
-      "label": "[HOG] LIST BACKUPS - Listar Backups",
+      "label": "[LEVIATHAN] LIST BACKUPS - Listar Backups",
       "type": "shell",
       "command": "if (Test-Path backups) { Get-ChildItem backups -Name | Sort-Object -Descending } else { Write-Host 'Nenhum backup encontrado' -ForegroundColor Yellow }",
       "presentation": {
@@ -386,7 +386,7 @@
       "detail": "Lista todos os arquivos de backup existentes"
     },
     {
-      "label": "[HOG] CONFIG COUNT - Contar Regras",
+      "label": "[LEVIATHAN] CONFIG COUNT - Contar Regras",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -402,7 +402,7 @@
       "detail": "Conta o numero total de regras no config.json"
     },
     {
-      "label": "[HOG] START_HOG.bat",
+      "label": "[LEVIATHAN] START_HOG.bat",
       "type": "shell",
       "command": "cmd",
       "args": [
@@ -415,10 +415,10 @@
         "reveal": "never"
       },
       "problemMatcher": [],
-      "detail": "Abre a interface grafica do THE HAND OF GOD"
+      "detail": "Abre a interface grafica do LEVIATHAN"
     },
     {
-      "label": "[HOG] MCP SERVER - Iniciar",
+      "label": "[LEVIATHAN] MCP SERVER - Iniciar",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -434,7 +434,7 @@
       "detail": "Inicia o servidor MCP para traducao em tempo real"
     },
     {
-      "label": "[HOG] MCP TEST - Testar Servidor",
+      "label": "[LEVIATHAN] MCP TEST - Testar Servidor",
       "type": "shell",
       "command": "echo '{\"jsonrpc\":\"2.0\",\"id\":1,\"method\":\"initialize\",\"params\":{}}' | C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe mcp_server.py",
       "presentation": {
@@ -446,7 +446,7 @@
       "detail": "Testa se o servidor MCP esta funcionando"
     },
     {
-      "label": "[HOG] HTTP TOOLKIT - Iniciar Interceptador",
+      "label": "[LEVIATHAN] HTTP TOOLKIT - Iniciar Interceptador",
       "type": "shell",
       "command": "npx ts-node plugin-http.ts",
       "presentation": {
@@ -461,7 +461,7 @@
       "detail": "Abre a interface de manipulacao de requisicoes com protecao HOG"
     },
     {
-      "label": "[HOG] HTTP TOOLKIT - Testar Endpoint",
+      "label": "[LEVIATHAN] HTTP TOOLKIT - Testar Endpoint",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
       "args": [
@@ -479,7 +479,7 @@
       "detail": "Testa um endpoint com protecao HOG integrada"
     },
     {
-      "label": "[HOG] HTTP TOOLKIT - Scan Rapido",
+      "label": "[LEVIATHAN] HTTP TOOLKIT - Scan Rapido",
       "type": "shell",
       "command": "C:\\Users\\th\\AppData\\Local\\Programs\\Python\\Python312\\python.exe http_toolkit.py scan --url ${input:targetUrl}",
       "presentation": {
