--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,8 @@
-﻿{
+{
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "HOG: Modo Interativo",
+            "name": "LEVIATHAN: Modo Interativo",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -14,7 +14,7 @@
             }
         },
         {
-            "name": "HOG: ENCODE",
+            "name": "LEVIATHAN: ENCODE",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -26,7 +26,7 @@
             }
         },
         {
-            "name": "HOG: RESTORE",
+            "name": "LEVIATHAN: RESTORE",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -38,7 +38,7 @@
             }
         },
         {
-            "name": "HOG: STATS",
+            "name": "LEVIATHAN: STATS",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -47,7 +47,7 @@
             "justMyCode": true
         },
         {
-            "name": "HOG: VALIDATE",
+            "name": "LEVIATHAN: VALIDATE",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -56,7 +56,7 @@
             "justMyCode": true
         },
         {
-            "name": "HOG: PREVIEW",
+            "name": "LEVIATHAN: PREVIEW",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
@@ -65,7 +65,7 @@
             "justMyCode": true
         },
         {
-            "name": "HOG: Debug com Args Customizados",
+            "name": "LEVIATHAN: Debug com Args Customizados",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/core/translator.py",
